# Actix-Flow

./: .env  .gitignore  Cargo.toml
entity/: Cargo.toml
entity/src/: mod.rs  post.rs  prelude.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241219_064427_create_user_table.rs
src/: main.rs
src/routes/: auth_route.rs  home_route.rs  mod.rs  post_route.rs  user_route.rs
src/routes/handlers/: auth_handler.rs  home_handler.rs  mod.rs  post_handler.rs  user_handler.rs
src/routes/middleware/: auth_middleware.rs
src/utils/: api_response.rs  constants.rs  jwt.rs
